# htmxlabs

./: .envrc  .gitignore  README.md  agent.md  aid.md  prd.md  pyproject.toml
src/site/config/: asgi.py  settings.py  sitemaps.py  urls.py
src/site/main/: .gitignore  consumers.py  examples.json  models.py  routing.py  tests.py  urls.py  utils.py  views.py
src/site/main/demo/: active-search-results.html  active-search.html  basic-ajax-response.html  basic-ajax.html  calendar-month.html  calendar.html  click-to-edit-form.html  click-to-edit-save.html  click-to-edit.html  clickme_example.html  color-picker-fragment.html  color-picker.html  csv-export.html  data-table-rows.html  data-table.html  delete-row.html  dependent-dropdown-options.html  dependent-dropdowns.html  drag-drop-update.html  drag-drop.html  file-upload-result.html  file-upload.html  form-validation.html  htmx-rest-api.html  infinite-scroll-items.html  infinite-scroll.html  kanban-board-update.html  kanban-board.html  language-switcher.html  lazy-load-image.html  lazy-load.html  like-button.html  live-chat.html  live-search-suggestions.html  live-search.html  live-stock-ticker.html  markdown-preview.html  master-detail-detail.html  master-detail.html  modal-dialog-content.html  (+15 more)
src/site/main/frontend/: _base.html  about_modal.html  api_reference.html  careers_modal.html  carousel.html  contact.html  contact_form_fragment.html  contact_success_fragment.html  examples.html  examples_grid.html  examples_new.html  footer.html  full_examples.html  index.html  navigation.html
src/site/main/frontend/docs/: core-attributes.html  getting-started.html  hero.html  index.html
src/site/main/migrations/: 0001_initial.py
src/site/main/static/main/: clipboard.js  docs_style.css  style.css
src/site/main/views/: __init__.py  examples_views.py  main_views.py  other_views.py
