[project]
name = "htmxlabs-com"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "channels>=4.2.2",
    "django>=5.2.3",
    "django-extensions>=4.1",
    "django-htmx>=1.23.0",
    "django-silent-mammoth-whistle>=2.5",
    "dotenv>=0.9.9",
    "markdown>=3.8.2",
    "requests>=2.32.4",
    "uvicorn[standard]>=0.35.0",
]
